--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-pandas==1.3.4
-torch>=1.10
+accelerate==0.8.0
+joblib==1.1.0
+numpy==1.22.3
+pandas==1.4.2
+pytest==7.1.2
+scikit_learn==1.1.1
+torch==1.11.0
 tqdm==4.64.0
